change name of pkg

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Document</title>
+        <title>gqutils</title>
     </head>
     <body>
-        <h1>welcome to smutils</h1>
+        <h1>welcome to gqutils</h1>
     </body>
-    <script src="./min/smutils.min.js"></script>
+    <script src="./min/gqutils.min.js"></script>
     <script>
-        window.smutils = smutils;
+        window.gqutils = gqutils;
     </script>
 </html>
